[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kondo-gate"
version = "0.1.0"
description = "Kondo Gate: Selective backward-pass gating for policy gradient training"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Shaw Walters" },
]
keywords = ["reinforcement-learning", "policy-gradient", "gating", "pytorch", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.30",
]
dev = [
    "pytest>=7.0",
    "transformers>=4.30",
]

[project.urls]
Repository = "https://github.com/lalalune/kondo-gate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
